# KameoRePowered

./: .gitignore  .sdk-version  CMakeLists.txt  CMakePresets.json  README.md  kameorepowered_config.toml  kameorepowered_manifest.toml  kameorepowered_tu_config.toml  kameorepowered_tu_overrides.toml  rekameo.toml  rekameo_config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  patch-mod-request.md
.github/workflows/: _build.yml  build.yml  ci.yml  release.yml
WindowsScripts/: Migrate.bat  Play.bat  PlayConsole.bat  PlayDebug.bat  Rebuild.bat  RegenAndRebuild.bat  Setup.bat
config/: rekameo_crt.toml  rekameo_ctx_ctr.toml  rekameo_functions.toml  rekameo_hooked.toml  rekameo_midasm.toml
scripts/: build.py  build_no_codegen.py  download-sdk.ps1  download-sdk.py  download-sdk.sh  extract-dlc.py  extract_dlc.py  extract_tu.py  find_data_reloc.py  find_reloc.py  run.py  sync_functions.py  va_disasm.py
src/: kameorepowered_app.h  kameorepowered_dialogs.h  kameorepowered_dlc_models.h  kameorepowered_fp_guard.h  kameorepowered_hooks.cpp  kameorepowered_hooks.h  kameorepowered_hooks_audio.cpp  kameorepowered_hooks_combat.cpp  kameorepowered_hooks_dlc.cpp  kameorepowered_hooks_internal.h  main.cpp  rekameo_app.h
src/kameo_engine/: Log.h  hooks.cpp  hooks.h  rex_macros.h
src/kameo_engine/Overlays/: Fps.cpp  Fps.h
tools/: README.md  peek_ppc.ps1  resolve_imports.ps1
